cabal-version: 1.12

name:           hw0
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Kvel4/haskell#readme>
homepage:       https://github.com/Kvel4/haskell#readme
bug-reports:    https://github.com/Kvel4/haskell/issues
author:         Monakhov Daniil
maintainer:     d.monakhov0@gmail.com
copyright:      2021 Monakhov Daniil
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md


library
  exposed-modules:
      HW0.T1
      HW0.T2
      HW0.T3
      HW0.T4
      HW0.T5
  other-modules:
      Paths_hw0_tests
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
